--- a/05_multimodal_systems_deepdive.ipynb
+++ b/05_multimodal_systems_deepdive.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/manideepbangaru/Documents/learnings/RAGs_deepdive/ragEnv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -31,107 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Failed to download (trying next):\n",
-      "HTTP Error 404: Not Found\n",
-      "\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz to ./data/MNIST/raw/train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 9912422/9912422 [00:11<00:00, 838724.35it/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/MNIST/raw/train-images-idx3-ubyte.gz to ./data/MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-      "Failed to download (trying next):\n",
-      "HTTP Error 404: Not Found\n",
-      "\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz to ./data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 28881/28881 [00:00<00:00, 93492.63it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/MNIST/raw/train-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Failed to download (trying next):\n",
-      "HTTP Error 404: Not Found\n",
-      "\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1648877/1648877 [00:06<00:00, 254232.03it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/MNIST/raw/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Failed to download (trying next):\n",
-      "HTTP Error 404: Not Found\n",
-      "\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4542/4542 [00:00<00:00, 1171259.07it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mnist_train = MNIST(root='./data', train=True, download=True)\n",
     "mnist_test = MNIST(root='./data', train=False, download=True)\n",
@@ -141,11 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SiameseDataset(Dataset):\n",
+    "    def __init__(self, data, transform=None):\n",
+    "        self.data = data\n",
+    "        self.transform = transform\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.data)  # Add this method\n",
+    "        \n",
     "\n",
     "    def __getitem__(self, index):\n",
     "    \n",
@@ -174,24 +73,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "SiameseDataset() takes no arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m siamese_train \u001b[38;5;241m=\u001b[39m \u001b[43mSiameseDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmnist_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransform\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m siamese_test \u001b[38;5;241m=\u001b[39m SiameseDataset(mnist_test, transform)\n",
-      "\u001b[0;31mTypeError\u001b[0m: SiameseDataset() takes no arguments"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "siamese_train = SiameseDataset(mnist_train, transform)\n",
     "siamese_test = SiameseDataset(mnist_test, transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SiameseNetwork(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(SiameseNetwork, self).__init__()\n",
+    "\n",
+    "        self.cnn = nn.Sequential(\n",
+    "            nn.Conv2d(1, 64, kernel_size=5, stride=1, padding=2),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(2, stride=2),\n",
+    "\n",
+    "            nn.Conv2d(64, 128, kernel_size=5, stride=1, padding=2),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(2, stride=2),\n",
+    "\n",
+    "            nn.Conv2d(128, 256, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(2, stride=2)\n",
+    "        )\n",
+    "\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(256 * 3 * 3, 1024),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "\n",
+    "            nn.Linear(1024, 256),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "\n",
+    "            nn.Linear(256, 2)\n",
+    "        )\n",
+    "\n",
+    "    def forward_once(self, x):\n",
+    "        output = self.cnn(x)\n",
+    "        output = output.view(output.size()[0], -1)\n",
+    "        output = self.fc(output)\n",
+    "        return output\n",
+    "\n",
+    "    def forward(self, inputA, inputB):\n",
+    "        outputA = self.forward_once(inputA)\n",
+    "        outputB = self.forward_once(inputB)\n",
+    "        return outputA, outputB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ContrastiveLoss(torch.nn.Module):\n",
+    "    \n",
+    "    def __init__(self, margin=2.0):\n",
+    "        super(ContrastiveLoss, self).__init__()\n",
+    "        self.margin = margin\n",
+    "\n",
+    "    def forward(self, outputA, outputB, y):\n",
+    "        euclidean_distance = F.pairwise_distance(outputA, outputB, keepdim = True)\n",
+    "\n",
+    "        same_class_loss = (1-y) * (euclidean_distance**2)\n",
+    "        diff_class_loss = (y) * (torch.clamp(self.margin - euclidean_distance, min=0.0)**2)\n",
+    "    \n",
+    "        return torch.mean(same_class_loss + diff_class_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataloader = DataLoader(siamese_train, shuffle=True, num_workers=0, batch_size=64)\n",
+    "model = SiameseNetwork()\n",
+    "criterion = ContrastiveLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr = 0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(5):\n",
+    "    total_loss = 0\n",
+    "    \n",
+    "    for imgA, imgB, label in train_dataloader:\n",
+    "\n",
+    "        # imgA, imgB, label = imgA.cuda(), imgB.cuda(), label.cuda()\n",
+    "        optimizer.zero_grad()\n",
+    "        outputA, outputB = model(imgA, imgB)\n",
+    "        loss_contrastive = criterion(outputA, outputB, label)\n",
+    "        loss_contrastive.backward()\n",
+    "\n",
+    "        total_loss += loss_contrastive.item()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    print(f\"Epoch {epoch}; Loss {total_loss}\")"
    ]
   },
   {
